Avoid flickering on initial route

--- a/src/styles/forms-minimal.scss
+++ b/src/styles/forms-minimal.scss
@@ -10,6 +10,7 @@
 		padding: 0.5rem;
 		border-radius: 4px;
 		border: 0;
+		font-size: 1rem;
 		background: var(--color-background-elevated);
 		color: var(--color-base);
 		transition: all var(--animation-base);
